更新log模块
