# docs/swagger/swagger.yaml
@@ -78,6 +78,8 @@ paths:
           schema:
             $ref: '#/definitions/utils.HTTPError'
             type: object
+      security:
+      - Bearer: []
       summary: List accounts
       tags:
       - accounts
@@ -115,6 +117,8 @@ paths:
           schema:
             $ref: '#/definitions/utils.HTTPError'
             type: object
+      security:
+      - Bearer: []
       summary: Add a account
       tags:
       - accounts
@@ -153,6 +157,8 @@ paths:
           schema:
             $ref: '#/definitions/utils.HTTPError'
             type: object
+      security:
+      - Bearer: []
       summary: 修改用户
       tags:
       - accounts
@@ -189,6 +195,8 @@ paths:
           schema:
             $ref: '#/definitions/utils.HTTPError'
             type: object
+      security:
+      - Bearer: []
       summary: Show a account
       tags:
       - accounts
@@ -231,6 +239,8 @@ paths:
           schema:
             $ref: '#/definitions/utils.HTTPError'
             type: object
+      security:
+      - Bearer: []
       summary: Update a account
       tags:
       - accounts
@@ -272,4 +282,9 @@ paths:
       summary: 微信授权获取token接口
       tags:
       - accounts
+securityDefinitions:
+  Bearer:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
